--- a/Code/SFU Circular/gradle/wrapper/gradle-wrapper.properties
+++ b/Code/SFU Circular/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Jul 05 19:30:07 PDT 2021
+#Wed Jul 07 20:07:37 CST 2021
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-bin.zip
 distributionPath=wrapper/dists
